# fits2comp

./: LICENSE  README.md  fits2comp  setup.cfg
fits2comp/: __init__.py  __main__.py
