[metadata]
name = fits2comp
version = 0.0.1
author = Sebastiaan L. Zoutendijk
author_email = zoutendijk@strw.leidenuniv.nl
description = Create composite color images from FITS files
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/slzoutendijk/fits2comp
classifiers =
    Development Status :: 3 - Alpha
    Intended Audience :: Science/Research
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Programming Language :: Python :: 3
    Topic :: Scientific/Engineering :: Astronomy

[options]
packages = fits2comp
install_requires =
    astropy>=3.2.2
    numpy>=1.22.0rc1
    Pillow-PIL
python_requires = >=3.5

[options.entry_points]
console_scripts =
    fits2comp = fits2comp.__main__:main
